--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@vueuse/head": "^0.7.9",
+    "tweakpane": "^3.1.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
@@ -28,6 +29,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
+    "@tweakpane/core": "^1.1.0",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.8",
